-fixed issue with placeholder being too big -removed visual rect around dragging tag widget -fixed rendering issue with stylesheet for tag widgets  by rendering their reference widget instead

--- a/application/resources/stylesheet.css
+++ b/application/resources/stylesheet.css
@@ -475,6 +475,7 @@ SearchFrame #pClose {
 
 TagWidget {
   font-size: 9pt;
+  background: transparent;
 }
 
 
